This commit fixes some scaling issues with the horizontally-large components of the form like the title image and the fertilizer select so that the form looks better on smaller screens.

--- a/styles.css
+++ b/styles.css
@@ -165,11 +165,32 @@ body {
     font-size: 20px;
 }
 
+/* medium-large screens */
+@media (851px <= width <= 1000px) {
+    .fertilizer-select {
+        width: 100%;
+    }
+}
+
 /* medium sized screens */
-@media (400px <= width <= 850px) {
+@media (530px <= width <= 850px) {
     .title-image-container .title-image {
         width: 500px;
         height: 265px;
+    }
+    .fertilizer-select {
+        width: 100%;
+    }
+}
+
+/* small screens */
+@media (width <= 529px) {
+    .title-image-container .title-image {
+        width: 250px;
+        height: 132px;
+    }
+    .fertilizer-select {
+        width: 100%;
     }
 }
 
